--- a/bio page.html
+++ b/bio page.html
@@ -16,5 +16,6 @@
     <p>Phone number: 0902400331</p>
     <p>Github: <a href="https://github.com/Anahira-22">https://github.com/Anahira-22</a></p> 
     <p>Telegram: @Anahira_22</p> 
+    <!--i was just studying html-->
 </body>
 </html> 
